# Commit_and_pull_1

./: CMakeLists.txt  QApplication.cpp  QApplication.h  QFile.cpp  QFile.h  QGridLayout.cpp  QGridLayout.h  QLabel.cpp  QLabel.h  QLineEdit.cpp  QLineEdit.h  QPushButton.cpp  QPushButton.h  QString.cpp  QString.h  QStringList.cpp  QStringList.h  QTextStream.cpp  QTextStream.h  QWidget.cpp  QWidget.h  main.cpp
