cmake_minimum_required(VERSION 3.21)
project(untitled11)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled11 main.cpp QString.cpp QString.h QFile.cpp QFile.h QTextStream.cpp QTextStream.h QGridLayout.cpp QGridLayout.h QLabel.cpp QLabel.h QApplication.cpp QApplication.h QWidget.cpp QWidget.h QLineEdit.cpp QLineEdit.h QPushButton.cpp QPushButton.h QStringList.cpp QStringList.h)
